# REST-rust-starter

./: .gitignore  Cargo.toml  Dockerfile  INSTRUCTIONS.md  Makefile  Podmanfile  README.md  docker-helper.ps1  docker-helper.sh  podman-helper.ps1  podman-helper.sh
.github/workflows/: ci.yml
src/: config.rs  main.rs  routes.rs
src/controllers/: health_controller.rs  mod.rs  project_controller.rs  task_controller.rs
src/middleware/: cors.rs  logging.rs  mod.rs
src/models/: mod.rs  project.rs  task.rs
src/repositories/: mod.rs  project_repo.rs  task_repo.rs
src/services/: mod.rs  project_service.rs  task_service.rs
src/views/: api_response.rs  mod.rs
static/: swagger-ui.html
